Switched to JDK 8