@@ -4,12 +4,16 @@ import me.despical.commons.configuration.ConfigUtils;
 import me.despical.commons.sorter.SortUtils;
 import me.despical.whackme.WhackMe;
 import me.despical.whackme.user.data.MysqlManager;
+import org.bukkit.configuration.file.FileConfiguration;
 import org.bukkit.entity.Player;
 import org.bukkit.plugin.java.JavaPlugin;
 import org.jetbrains.annotations.Contract;
 import org.jetbrains.annotations.NotNull;
 
+import java.sql.Connection;
+import java.sql.ResultSet;
 import java.sql.SQLException;
+import java.sql.Statement;
 import java.util.LinkedHashMap;
 import java.util.Map;
 import java.util.UUID;
@@ -26,11 +30,13 @@ public class StatsStorage {
 	@NotNull
 	@Contract("null -> fail")
 	public static Map<UUID, Integer> getStats(StatisticType stat) {
-		if (plugin.getUserManager().getUserDatabase() instanceof MysqlManager mysqlManager) {
-			try (final var connection = plugin.getMysqlDatabase().getConnection()) {
-				final var statement = connection.createStatement();
-				final var set = statement.executeQuery("SELECT UUID, %s FROM %s ORDER BY %s".formatted(stat.getName(), mysqlManager.getTable(), stat.getName()));
-				final var column = new LinkedHashMap<UUID, Integer>();
+		if (plugin.getUserManager().getUserDatabase() instanceof MysqlManager) {
+			MysqlManager mysqlManager = (MysqlManager) plugin.getUserManager().getUserDatabase();
+
+			try (final Connection connection = plugin.getMysqlDatabase().getConnection()) {
+				final Statement statement = connection.createStatement();
+				final ResultSet set = statement.executeQuery(String.format("SELECT UUID, %s FROM %s ORDER BY %s", stat.getName(), mysqlManager.getTable(), stat.getName()));
+				final Map<UUID, Integer> column = new LinkedHashMap<>();
 
 				while (set.next()) {
 					column.put(UUID.fromString(set.getString("UUID")), set.getInt(stat.getName()));
@@ -43,10 +49,10 @@ public class StatsStorage {
 			}
 		}
 
-		final var config = ConfigUtils.getConfig(plugin, "stats");
-		final var stats = new LinkedHashMap<UUID, Integer>();
+		final FileConfiguration config = ConfigUtils.getConfig(plugin, "stats");
+		final Map<UUID, Integer> stats = new LinkedHashMap<UUID, Integer>();
 
-		for (var string : config.getKeys(false)) {
+		for (String string : config.getKeys(false)) {
 			stats.put(UUID.fromString(string), config.getInt(string + "." + stat.getName()));
 		}
 
